added text and link colours

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
   <meta charset="utf-8">
   <title> Favourite Movie. </title>
 <style>
-    
+    #container{
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+    }
+    a:link {
+        color: #294256;
+        text-decoration: none;
+        }
+        a:visited {
+        color: rgb(134, 62, 113);
+        }
+        a:hover {
+        color: rgb(116, 8, 8);
+        text-decoration: underline;
+    }
+    header{
+        text-align: center;
+        font-size: 30px
+    }
     h2{
         color:#672828;
         background-color: #FFC6C2;
@@ -12,24 +31,35 @@
     p{
         color:#534227;
         background-color: #FAE9DA;
+        font-size: 20px;
     }
     footer{
         color:#294256;
-        background-color: #C3E0DD
+        background-color: #C3E0DD;
+        font-size: 20px;
     }
 </style>
 </head>
 
-<body>
-<header><h2> Favourite Movie. </h2></header>
-
-<p> 
-test 
-</p>
-
-<footer> 
-test2
-</footer>
-
-</body>
+    <body>
+        <div id="container">
+            <header>
+                <h2> Favourite Movie. </h2>
+            </header>
+            <main>
+                <p> 
+                    I don't typically watch movies, as I find it difficult to sit through a film longer than 30 minutes when I might not end up liking it.
+                    I'm not sure if I would say it is my favourite, but this movie definitely stuck with me, even now. Detachment was a movie that depicted the life of an average English teacher in a more impoverished neighbourhood. Adrien Brody played the teacher, and I feel he did an amazing job at performing an isolated, disillusioned teacher.
+                    
+                </p>
+                <p> 
+                    There were some scenes in the movie where I felt it went into the unrealistic realm, and some things definitely felt rushed. Although, the overall tone and feeling this movie gives you makes you almost feel as if you're there with him, and I believe this might have to do with the loose/floaty filming style.
+                    In the end I'd say the film managed to depict a unique type of hopelessness and cruelty that many people experience behind closed doors.
+                </p>
+            </main>
+                <footer> 
+                    <a href="https://www.imdb.com/title/tt1683526/">Detachment</a>
+                </footer>
+        </div>
+    </body>
 </html>
